--- a/src/login.css
+++ b/src/login.css
@@ -101,5 +101,5 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url(/public/imageLogin.png) no-repeat center center/cover;
+    background: url(/imageLogin.png) no-repeat center center/cover;
 }
